--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -140,7 +140,7 @@ li {
     margin: 10px 5px;
     text-decoration: none;
     font-weight: bold;
-    color: #d1cfcf;
+    color: #5a5959;
     background: linear-gradient(45deg, #d4fc79, #96e6a1);
     border-radius: 8px;
     transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
