--- a/templates/course.html
+++ b/templates/course.html
@@ -140,7 +140,9 @@
         }
 
         .button {
-            color: rgb(47, 45, 45)
+            font-weight: bold;
+            color: #5a5959;
+            background: linear-gradient(45deg, #d4fc79, #96e6a1);
         }
     </style>
 </head>
