--- a/templates/index.html
+++ b/templates/index.html
@@ -231,13 +231,13 @@
     </div>
 
     <div class="landing-container">
-        <h1>Welcome to Automata ITS</h1>
+        <h1 class="welcome-heading">Welcome to Automata ITS</h1>
         <a class="button" href="{{ url_for('course_page') }}">Lessons</a>
         <a class="button" href="/chat">Chat</a>
         <a class="button" href="{{ url_for('track_progress') }}">Track Progress</a>
         <!-- Logout button, handled by JavaScript -->
         <button class="button" onclick="logout()"
-            style="background-color: #F08080; color: rgb(54, 54, 54); font-style:italic;">Logout</button>
+            style="font-style:italic;">Logout</button>
     </div>
 
     <script>
