--- a/templates/chat.html
+++ b/templates/chat.html
@@ -151,6 +151,12 @@
             margin-left: 0;
             margin-right: 0;
         }
+
+        .button {
+            font-weight: bold;
+            color: #5a5959;
+            background: linear-gradient(45deg, #d4fc79, #96e6a1);
+        }
     </style>
 </head>
 
