naming problem for google auth

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -219,7 +219,7 @@
                     <div class="error-message">{{ error }}</div>
                     {% endif %}
                 </form>
-                <button type="button" id="googleSignInBtn" class="google-button">
+                <button type="button" id="googleSignUpBtn" class="google-button">
                     <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google logo"
                         class="google-icon" />
                     <span>Continue with Google</span>
