--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
             background-color: #e36b6b;
         }
 
-        @media (min-width: 400px) and (max-width: 600px) {
+        /* @media (min-width: 400px) and (max-width: 600px) {
             .popup-content {
                 height: 50%;
                 max-height: 70vh;
@@ -186,10 +186,10 @@
                 display: block;
                 font-size: 1.2em;
                 margin: 0 0 12px;
-            }
+            } */
 
             /* Override the desktop absolute positioning */
-            .popup-question {
+            /* .popup-question {
                 position: absolute !important;
                 top: auto !important;
                 left: auto !important;
@@ -210,8 +210,8 @@
                 flex-direction: row;
                 gap: 10px;
                 margin-top: 40px;
-            }
-
+            } */
+/* 
             .popup-buttons button {
                 width: 40%;
                 min-width: unset;
@@ -263,7 +263,7 @@
             }
 
             /* Override the desktop absolute positioning */
-            .popup-question {
+            /* .popup-question {
                 position: absolute !important;
                 top: auto !important;
                 left: auto !important;
@@ -292,7 +292,7 @@
                 padding: 10px 0;
                 font-size: 0.9em;
             }
-        }
+        } */ 
     </style>
 </head>
 
