--- a/templates/course.html
+++ b/templates/course.html
@@ -161,7 +161,7 @@
         <p>
             <strong>Study Tip:</strong> Chapters with a <span class="example-icon green-icon"></span> status icon are
             recommended for studying, while chapters with a <span class="example-icon yellow-icon"></span> status icon
-            can be skipped if you are already comfortable with the material.
+            can be skipped if you are already comfortable with the material based on your answers to the initial survey.
         </p>
     </div>
 
