--- a/templates/index.html
+++ b/templates/index.html
@@ -211,88 +211,15 @@
                 gap: 10px;
                 margin-top: 40px;
             } */
-/* 
-            .popup-buttons button {
-                width: 40%;
-                min-width: unset;
-                padding: 10px 0;
-                font-size: 0.9em;
-            }
 
-            .popup-question:not(.active) {
-                pointer-events: none;
-            }
 
-            .popup-question.active {
-                opacity: 1;
-                transform: translateX(0) translateY(-50%);
-            }
-
-            .popup-question.slide-out {
-                opacity: 0;
-                transform: translateX(-100%) translateY(-50%);
-            }
-
-            .popup-question.slide-in {
-                opacity: 1;
-                transform: translateX(0) translateY(-50%);
+        @media (max-width: 600px) {
+            .popup-content {
+                height: 55% !important;
             }
         }
 
-        @media (max-width: 400px) {
-
-            .popup-content {
-                height: 58%;
-                max-height: 70vh;
-                width: 80%;
-                max-width: 400px;
-                padding: 16px;
-            }
-
-            .popup-content h1 {
-                display: block;
-                font-size: 1.6em;
-                margin: 0 0 8px;
-                margin-top: 20px;
-            }
-
-            .popup-content h2 {
-                display: block;
-                font-size: 1.2em;
-                margin: 0 0 12px;
-            }
-
-            /* Override the desktop absolute positioning */
-            /* .popup-question {
-                position: absolute !important;
-                top: auto !important;
-                left: auto !important;
-                transform: none !important;
-                align-items: center !important;
-                justify-content: center !important;
-                margin-left: 30px;
-            }
-
-            .popup-question p {
-                font-size: 1.1em;
-                line-height: 1.4;
-                margin-bottom: 16px;
-            }
-
-            .popup-buttons {
-                display: flex;
-                flex-direction: row;
-                gap: 10px;
-                margin-top: 40px;
-            }
-
-            .popup-buttons button {
-                width: 40%;
-                min-width: unset;
-                padding: 10px 0;
-                font-size: 0.9em;
-            }
-        } */ 
+           
     </style>
 </head>
 
