added an fsm drawer

--- a/templates/index.html
+++ b/templates/index.html
@@ -289,6 +289,7 @@
         <h1 class="welcome-heading">Welcome to Automata ITS</h1>
         <a class="button" href="{{ url_for('course_page') }}">Lessons</a>
         <a class="button" href="/chat">Chat</a>
+        <a class="button" href="/drawer">Practice</a>
         <a class="button" href="{{ url_for('track_progress') }}">Track Progress</a>
         <!-- Logout button, handled by JavaScript -->
         <button class="button" onclick="logout()" style="font-style:italic;">Logout</button>
